Jun 20 2008  devel  Flag packets > 802.11 MTU as errors in the early-stage capture
Jun 19 2008  devel  Escape escape character in mungeprintable and escape ; as octal
                     in CSV (as per Fidge)

May 29 2008 2008-05 Release
                     wrt54 fixes
                     Multiple Darwin fixes
                     GPS rewrite and fixes
                     Nokia tweaks
                     Imagemagick fixes

May 19 2008  devel  More wrt54 prism0 hacks
May 15 2008  devel  Tweaked the wrt54 stuff more (where does prism0 come from?)
May 14 2008  devel  Tweaked wrt54 source
May 12 2008  devel  Added configure patch for OSX and debian control files
                     from Evan Broder
                    Fixed imagemagick detect on modern IM installs
May 09 2008  devel  Added gpsmap patches from Kripton to support open street maps
Apr 09 2008  devel  Added DLT80211 and DLT80211_AVS to the linktype setting
                     code on Darwin, BSD
                    Added 'kismet' wrapper binary, conf files to clean/distclean
Apr 08 2008  devel  Fixed assorted messages being printed in quiet mode
Mar 25 2008  devel  Added additional warnings/info for madwifi-ng about
                     autocreate=none when other vaps are found.
Mar 19 2008  devel  Removed wlancond/power setting on Maemo/Nokia since it
                     doesn't seem to reliably help
Mar 16 2008  devel  Merged patches from Alexandre Balavas to clean up warnings
                     on CentOS
Mar 02 2008  devel  Re-ordered headers in panelfront_display to prevent weird
                     compiler issue on Darwin
Feb 24 2008  devel  Fixed gpsd speed issue on water mode, thanks again to
                     Antonio
Feb 12 2008  devel  Fixed segv on gps=false introduced in recent gps rewrite
                     (thanks Antonio Eugenio Burriel for patch)
                    Added rt61 and rt8187 source names
Feb 06 2008  devel  Fixed segv on OSX in client on closedir